--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!--Copyright 2020 git training
 -->
 <head>
-	<title>An example website</title>
+	<title>A great website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,11 +16,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			some important stuff goes here
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Git training Company 2014</p>
 	</footer>
 </body>
 </html>
