--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <!--Copyright 2020 git training
+	Adding changes before rebasing conflict
 -->
 <head>
 	<title>A very respectful website</title>
