--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Some silly changes from master branch
 -->
 <head>
-	<title>silly change on master</title>
+	<title>A very respectful website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,10 +15,7 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Junk Filler Content -->
 		<p>
-			Just stuff for now
-			Not sure if we should replace this or not
 		</p>
 	</main>
 	<footer class="container">
