--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!--Copyright 2020 git training
-	Adding changes before rebasing conflict
+	Some silly changes from master branch
 -->
 <head>
-	<title>A very respectful website</title>
+	<title>silly change on master</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,13 +15,14 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk Filler Content -->
 		<p>
-			Just some content
+			Just stuff for now
+			Not sure if we should replace this or not
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Git training Company 2014</p>
+		<p>&copy; Anand Kumar 2014</p>
 	</footer>
 </body>
 </html>
