--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Some silly changes from master branch
 -->
 <head>
-	<title>A very respectful website</title>
+	<title>Lots of trouble, in a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
