changes after git-stash-branch command

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Some silly changes from master branch
 -->
 <head>
-	<title>Updating webpage for stash example</title>
+	<title>Updating webpage for stash branch example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
